--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "@apollo/client": "^3.7.16",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "apollo": "^2.34.0",
     "apollo-server": "^3.12.0",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
+    "client": "^0.0.1",
     "express": "^4.17.1",
     "graphql": "^16.7.0",
     "graphql-modules": "^2.1.2"
