--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql": "^16.7.0",
     "graphql-modules": "^2.1.2",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^7.3.2",
     "react-router": "^6.14.1",
     "react-router-dom": "^5.2.0",
     "web-vitals": "^3.3.2"
